# ifmo-labs-1

./: .gitignore  I_<3_BIG_COCKS.md  Justfile  LICENSE  MANIFEST.mf  Main.hs  README  README.md  SomeSchemas  action.php  build.properties  build.xml  cfg_gen.py  clear.php  compare_results.py  config.properties  data.xml  extended.json  extended.xml  fp-polytech.cabal  full.sh  generator.py  graph-plotter.ipynb  helper.py  index.php  justfile  lab0_1.sh  lab0_2.sh  lab0_3.sh  lab0_4.sh  lab0_5.sh  main.cpp  main.py  mood_analyzer.py  output.txt  pom.xml  report.txt  requirements.txt  results.json  run_all.sh  (+17 more)
.github/workflows/: generator.yml
backend/: Dockerfile  pom.xml  some-docker-info  start-spring-docker.sh  stop-spring-docker.sh  todo
backend-oauth2/: Dockerfile  HELP.md  build-spring-docker.sh  pom.xml  run-spring-docker.sh
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/api/: api.js  auth.js  health.js
lab0/: dratini3  rhyhorn9  rhyhorn9_67
lab0/hitmontop8/: dragonite  salamence
src/: KotoedIngredient.hs  Lambdas.hs  TestMain.hs  Util.hs
src/Part1/: Tasks.hs  Tests.hs
src/Part2/: Tasks.hs  Tests.hs
src/Part3/: Tasks.hs  Tests.hs
src/Part4/: Tasks.hs  Tests.hs
src/Part5/: Tasks.hs  Tests.hs
src/Part6/: Tasks.hs  Tests.hs
src/main/java/: Actor.java  Balaganchik.java  Business.java  Businessman.java  Cafe.java  Pie.java  (+15 more)
test/: example_ahf.cpp  example_aif.cpp  example_cof.cpp  example_comprehensive.cpp  example_mhf.cpp  example_mif.cpp  example_pof.cpp
(+278 files in other folders)
