name:                fp-polytech
version:             0.0.0.1
synopsis:            Sample project showing how to use HTF
description:         Sample project showing how to use HTF
homepage:            https://github.com/skogsbaer/HTF/
license:             BSD3
license-file:        LICENSE
author:              Stefan Wehr
maintainer:          mail@stefanwehr.de
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

test-suite sample-tests
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  hs-source-dirs:    . src
  other-modules:
    Util
    KotoedIngredient
    Part1.Tasks Part1.Tests
    Part2.Tasks Part2.Tests
    Part3.Tasks Part3.Tests
    Part4.Tasks Part4.Tests
    Part5.Tasks Part5.Tests
    Part6.Tasks Part6.Tests
    Lambdas
  build-depends:
    base,
    safe-exceptions,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-discover,
    tasty-html,
    aeson,
    stm,
    mtl,
    containers,
    directory,
    filepath,
    pretty-terminal
  default-language:  Haskell2010
